# weather-forecast

./: LICENSE  README.md  pyproject.toml
tests/: test_api_caller.py
weather_forecast/: api_caller.py  cli.py  models.py
