[tool.poetry]
name = "weather-forecast"
version = "0.1.0"
description = ""
authors = ["mehrdadsaadati <63453421+mehrdadsaadati@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
forecast = "forecast.cli:main"